# ragkit

./: .gitignore  404.html  CNAME  LICENSE  README.md  cdc.md  index.html  mkdocs.yml  pyproject.toml  rag.yaml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
api-reference/: index.html
changelog/: index.html
cli/: index.html
configuration/: index.html
contributing/: index.html
docs/: api-reference.md  changelog.md  cli.md  configuration.md  contributing.md  index.md  models.md  pipeline.md  plugins.md  quickstart.md  sources.md
examples/: 01_markdown_chatbot.py  02_csv_faq.py  run_demo.py
models/: index.html
pipeline/: index.html
plugins/: index.html
quickstart/: index.html
ragkit/: __init__.py  __main__.py  agent.py
ragkit/cache/: __init__.py  embedding_cache.py  query_cache.py
ragkit/cli/: __init__.py  main.py
ragkit/core/: __init__.py  base.py  config.py  hooks.py  registry.py
ragkit/embeddings/: __init__.py  sentence_transformers.py
ragkit/models/: __init__.py  openrouter.py
ragkit/pipeline/: __init__.py  chunker.py  cleaner.py  indexer.py
ragkit/plugins/: __init__.py
ragkit/sources/: __init__.py  csv.py  directory.py  json.py  markdown.py  rest.py  txt.py
ragkit/utils/: __init__.py  logger.py  telemetry.py
ragkit/vectorstores/: __init__.py  chroma.py
search/: search_index.json
sources/: index.html
tests/scripts/: test_cli_smoke.sh  test_embeddings_smoke.sh
tests/unit/: test_agent.py  test_cache.py  test_chunker.py  test_cleaner.py  test_cli.py  test_config.py  test_embeddings.py  test_error_handling.py  test_hooks.py  test_indexer.py  test_openrouter.py  test_registry.py  test_rest_source.py  test_sources.py  test_telemetry.py  test_vectorstore.py
