[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ragkit"
version = "0.1.0"
description = "Universal RAG framework SDK for Python developers"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Igor ADANDE", email = "igoradande44@gmail.com" }]
keywords = ["rag", "llm", "ai", "retrieval", "embeddings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "structlog>=24.0.0",
    "typer>=0.12.0",
    "diskcache>=5.6.0",
    "sentence-transformers>=3.0.0",
    "chromadb>=0.5.0",
]

[project.optional-dependencies]
qdrant = ["qdrant-client>=1.9.0"]
serve = ["fastapi>=0.111.0", "uvicorn>=0.30.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "numpy>=1.24.0",
]

[project.scripts]
rag = "ragkit.cli.main:app"

[project.urls]
Homepage = "https://ragkit.igoradande.me"
Documentation = "https://ragkit.igoradande.me"
Repository = "https://github.com/HustlerLabs/ragkit"
Issues = "https://github.com/HustlerLabs/ragkit/issues"

[project.entry-points."ragkit.plugins"]
# placeholder for third-party plugins

[tool.setuptools.packages.find]
where = ["."]
include = ["ragkit*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
